welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: not found: value n
		if (estSurBiscuit()) {n = n + 1}
                                      ^Poucet:8: error: not found: value nb
	nb match {
        ^Poucet:9: error: not found: value nb
		case n if nb>=3 => gauche()
                          ^Poucet:10: error: not found: value nb
		case n if nb<=2 => droite()
                          ^